make bugsquish align to correct size

--- a/prog8/style.css
+++ b/prog8/style.css
@@ -2,7 +2,7 @@ button {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 15px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
